# cmake

doc/: cmake_notes.txt
src/: CMakeLists.txt
src/foo/: CMakeLists.txt
src/main/: CMakeLists.txt
